--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,3 +32,8 @@ steps:
   inputs:
     platform: '$(buildPlatform)'
     configuration: '$(buildConfiguration)'
+
+- task: PublishPipelineArtifact@1
+  inputs:
+    path: '$(System.DefaultWorkingDirectory)/bin/$(buildConfiguration)'
+    artifact: WebApp
