fixes to get the API call work better

--- a/WebApp-OpenIDConnect-DotNet/appsettings.json
+++ b/WebApp-OpenIDConnect-DotNet/appsettings.json
@@ -15,8 +15,8 @@
       "AzureAdB2CInstance": "https://yourtenant.b2clogin.com/tfp",
       "ClientId": "AppID of your WebApp",
       "ClientSecret": "Key of your WebApp",
-      "ClientId.APi": "AppID of your WebAPI",
-      "ClientSecret.Api": "Key of your WebAPI",
+      "ClientIdAPi": "AppID of your WebAPI",
+      "ClientSecretApi": "Key of your WebAPI",
       "SignUpSignInPolicyId": "B2C_1A_sisu",
       "SignUpPolicyId": "B2C_1A_sisu",
       "SignInPolicyId": "B2C_1A_sisu",
@@ -25,16 +25,15 @@
       "EditProfilePolicyId": "B2C_1A_edit",
       "RedirectUri": "https://localhost:44316/signin-oidc",
       "ApiUrl": "http://localhost:5000/hello",
-      "ApiScopes.Old": "https://yourtenant.onmicrosoft.com/helloapi/demo.read",
-      "ApiScopes": "https://yourapi.azurewebsites.net/yourapi-appname/demo.read"
+      "ApiScopes": "https://yourapi.onmicrosoft.com/yourapi-appname/demo.read"
     },
     "B2C-BDO-Azure": {
       "Tenant": "yourtenant.onmicrosoft.com",
       "AzureAdB2CInstance": "https://yourtenant.b2clogin.com/tfp",
       "ClientId": "AppID of your WebApp",
       "ClientSecret": "Key of your WebApp",
-      "ClientId.APi": "AppID of your WebAPI",
-      "ClientSecret.Api": "Key of your WebAPI",
+      "ClientIdAPi": "AppID of your WebAPI",
+      "ClientSecretApi": "Key of your WebAPI",
       "SignUpSignInPolicyId": "B2C_1A_sisu",
       "SignUpPolicyId": "B2C_1A_sisu",
       "SignInPolicyId": "B2C_1A_sisu",
@@ -43,7 +42,7 @@
       "EditProfilePolicyId": "B2C_1A_edit",
       "RedirectUri": "https://yourwebapp.azurewebsites.net/signin-oidc",
       "ApiUrl": "https://yourapi.azurewebsites.net/hello",
-      "ApiScopes": "https://yourapi.azurewebsites.net/yourapi-appname/demo.read"
+      "ApiScopes": "https://yourapi.onmicrosoft.com/yourapi-appname/demo.read"
     }
   }
 }
